--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         <div class="ba-header-main">
             <div class="container">
                 <div class="ba-header-main-wrapper">
-                    <a class="ba-header-main-logo ba-col-10 ba-col-md-5" href="./index.html">
+                    <a class="ba-header-main-logo ba-col-8 ba-col-sm-3 ba-col-md-3" href="./index.html">
                         <img src="./img/logo.png" alt="logo">
                     </a>
-                    <nav class="ba-header-main-nav ba-col-10 ba-col-md-5 hidden-sm">
+                    <nav class="ba-header-main-nav ba-col-sm-7 hidden-sm ba-col-md-7">
                         <ul class="ba-menu">
                             <li class="ba-menu-item">
                                 <a href="./woman.html" class="ba-menu__link">Женщинам
@@ -80,7 +80,7 @@
                             </li>
                         </ul>
                     </nav>
-                    <div class="shopping ba-col-2 ba-col-md-2">
+                    <div class="shopping ba-col-4 ba-col-sm-3 ba-col-md-2">
                         <a class="shopping-favorites" href="#" id="wishlist">
                             <img src="img/favorites.png" alt="">
                             <span class="shopping-counter">0</span>
@@ -102,7 +102,7 @@
 
     <main>
         <section>
-            <div class="ba-slider1 hidden-sm ba-row">
+            <div class="ba-slider1 ba-row">
                 <div>
                     <img src="./img/banner4.jpg" alt="">
                 </div>
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                     <!--  -->
-                    <div class="card ba-col-12">
+                    <div class="card ba-col-12 ba-col-sm-6">
                         <div class="card-img-wrapper">
                             <img class="" src="./img/girl_5.jpg" alt="${title}">
                             <button class="card-add-wishlist ${wishlist.includes(id) ? 'active' : ''}"
