--- a/woman.html
+++ b/woman.html
@@ -52,10 +52,10 @@
         <div class="ba-header-main">
             <div class="container">
                 <div class="ba-header-main-wrapper">
-                    <a class="ba-header-main-logo ba-col-10 ba-col-md-5" href="./index.html">
+                    <a class="ba-header-main-logo ba-col-8 ba-col-sm-3 ba-col-md-3" href="./index.html">
                         <img src="./img/logo.png" alt="logo">
                     </a>
-                    <nav class="ba-header-main-nav ba-col-10 ba-col-md-5 hidden-sm">
+                    <nav class="ba-header-main-nav ba-col-sm-7 hidden-sm ba-col-md-7">
                         <ul class="ba-menu">
                             <li class="ba-menu-item">
                                 <a href="./woman.html" class="ba-menu__link">Женщинам
@@ -77,7 +77,7 @@
                             </li>
                         </ul>
                     </nav>
-                    <div class="shopping ba-col-2 ba-col-md-2">
+                    <div class="shopping ba-col-4 ba-col-sm-3 ba-col-md-2">
                         <a class="shopping-favorites" href="#" id="wishlist">
                             <img src="img/favorites.png" alt="">
                             <span class="shopping-counter">0</span>
