--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                         <i class="fas fa-phone-alt"></i>
                         8 800 123 45 67
                     </span>
-                    <a class="ba-header-top-contacts__link" href="./contact.html">
+                    <!-- <a class="ba-header-top-contacts__link" href="./contact.html">
                         Контакты
-                    </a>
+                    </a> -->
                 </div>
                 <div class="ba-header-top-user">
                     <!-- <div class="user__currency">$us<span><i class="fas fa-sort-down"></i></span></div> -->
@@ -163,16 +163,20 @@
         <section>
             <div class="subscribe">
                 <div class="container">
-                    <div class="subscribe-mail"><span>Подписаться</span>
-                        <input type="text" placeholder="Ваш email">
+                    <div class="subscribe-mail ba-col-12 ba-col-md-6">
+                        <span>Подписаться</span>
+                        <input class="subscribe-mail__input" type="text" placeholder="Ваш email">
                         <button class="btn"><i class="fas fa-plus"></i></button>
                     </div>
 
-                    <div class="ba-social">
-                        <span>Мы здесь</span>
-                        <a href="#" class="ba-social__items"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
-                        <a href="#" class="ba-social__items"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-                        <a href="#" class="ba-social__items"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+                    <div class="ba-social ba-col-12 ba-col-md-4">
+                        <div class="ba-social-wrapper">
+                            <span>Мы здесь</span>
+                            <a href="#" class="ba-social__items"><i class="fab fa-facebook-f"
+                                    aria-hidden="true"></i></a>
+                            <a href="#" class="ba-social__items"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+                            <a href="#" class="ba-social__items"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -182,7 +186,7 @@
 
             <div class="container">
                 <div class="goods-title">
-                    <h5>SALE</h5>
+                    <h5>Самые популярные</h5>
                 </div>
                 <div class="ba-row goods-wrapper ba-slider2">
                     <div class="card ba-col-12 ba-col-sm-6">
@@ -378,6 +382,216 @@
                     Nullam ac urna eu felis dapibus condimentum sit amet a augue. </p>
             </div>
         </section>
+
+        <section class="map-section">
+            <div class="container">
+                <div class="ba-col-3">
+                    <h5>Наши магазины</h5>
+                    <h6>Харьков</h6>
+                    <h6>Киев</h6>
+
+
+                </div>
+                <div class="ba-col-9 ba-section6-map scroll-to" id="map">
+                    <script>
+                        function initMap() {
+                            let map;
+                            let nolan = { lat: 50.0115159, lng: 36.2429247 };
+                            // let myCenter = { lat: 40.673443, lng: -73.896206 };
+                            let myCenter = { lat: 50.010335, lng: 36.243487 };
+                            // 50.0041002,36.2353144,17.42
+
+                            map = new google.maps.Map(document.getElementById('map'), {
+                                center: myCenter,
+                                // height: 700,
+                                // icon: './img/pin.png',
+                                // icon: './img/cupcake.svg',
+                                zoom: 15,
+                                styles: [
+                                    {
+                                        "elementType": "geometry",
+                                        "stylers": [
+                                            {
+                                                "color": "#f5f5f5"
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "elementType": "labels.icon",
+                                        "stylers": [
+                                            {
+                                                "visibility": "off"
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "elementType": "labels.text.fill",
+                                        "stylers": [
+                                            {
+                                                "color": "#616161"
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "elementType": "labels.text.stroke",
+                                        "stylers": [
+                                            {
+                                                "color": "#f5f5f5"
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "featureType": "administrative.land_parcel",
+                                        "elementType": "labels.text.fill",
+                                        "stylers": [
+                                            {
+                                                "color": "#bdbdbd"
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "featureType": "poi",
+                                        "elementType": "geometry",
+                                        "stylers": [
+                                            {
+                                                "color": "#eeeeee"
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "featureType": "poi",
+                                        "elementType": "labels.text.fill",
+                                        "stylers": [
+                                            {
+                                                "color": "#757575"
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "featureType": "poi.park",
+                                        "elementType": "geometry",
+                                        "stylers": [
+                                            {
+                                                "color": "#e5e5e5"
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "featureType": "poi.park",
+                                        "elementType": "labels.text.fill",
+                                        "stylers": [
+                                            {
+                                                "color": "#9e9e9e"
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "featureType": "road",
+                                        "elementType": "geometry",
+                                        "stylers": [
+                                            {
+                                                "color": "#ffffff"
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "featureType": "road.arterial",
+                                        "elementType": "labels.text.fill",
+                                        "stylers": [
+                                            {
+                                                "color": "#757575"
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "featureType": "road.highway",
+                                        "elementType": "geometry",
+                                        "stylers": [
+                                            {
+                                                "color": "#dadada"
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "featureType": "road.highway",
+                                        "elementType": "labels.text.fill",
+                                        "stylers": [
+                                            {
+                                                "color": "#616161"
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "featureType": "road.local",
+                                        "elementType": "labels.text.fill",
+                                        "stylers": [
+                                            {
+                                                "color": "#9e9e9e"
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "featureType": "transit.line",
+                                        "elementType": "geometry",
+                                        "stylers": [
+                                            {
+                                                "color": "#e5e5e5"
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "featureType": "transit.station",
+                                        "elementType": "geometry",
+                                        "stylers": [
+                                            {
+                                                "color": "#eeeeee"
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "featureType": "water",
+                                        "elementType": "geometry",
+                                        "stylers": [
+                                            {
+                                                "color": "#c9c9c9"
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "featureType": "water",
+                                        "elementType": "labels.text.fill",
+                                        "stylers": [
+                                            {
+                                                "color": "#9e9e9e"
+                                            }
+                                        ]
+                                    }
+                                ]
+                            });
+
+                            let marker = new google.maps.Marker({
+                                position: nolan,
+                                map: map,
+                                // title: '123',
+
+                                icon: {
+                                    url: './img/pin.svg',
+                                    origin: new google.maps.Point(0, 0),
+                                    size: new google.maps.Size(62, 62)
+                                    // anchor: new google.maps.Anchor(62, 62),
+                                }
+                            });
+                        }
+                    </script>
+                    <script async defer
+                        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBW1OmFxMxpAaNmaKaHgg9nQSV6OoLTqPQ&callback=initMap"></script>
+                    <!-- AIzaSyBW1OmFxMxpAaNmaKaHgg9nQSV6OoLTqPQ -->
+                    <!-- https://maps.googleapis.com/maps/api/staticmap?key=YOUR_API_KEY&center=47.65,-122.35000000000002&zoom=12&format=png&maptype=roadmap&style=element:geometry%7Ccolor:0xf5f5f5&style=element:labels.icon%7Cvisibility:off&style=element:labels.text.fill%7Ccolor:0x616161&style=element:labels.text.stroke%7Ccolor:0xf5f5f5&style=feature:administrative.land_parcel%7Celement:labels.text.fill%7Ccolor:0xbdbdbd&style=feature:poi%7Celement:geometry%7Ccolor:0xeeeeee&style=feature:poi%7Celement:labels.text.fill%7Ccolor:0x757575&style=feature:poi.park%7Celement:geometry%7Ccolor:0xe5e5e5&style=feature:poi.park%7Celement:labels.text.fill%7Ccolor:0x9e9e9e&style=feature:road%7Celement:geometry%7Ccolor:0xffffff&style=feature:road.arterial%7Celement:labels.text.fill%7Ccolor:0x757575&style=feature:road.highway%7Celement:geometry%7Ccolor:0xdadada&style=feature:road.highway%7Celement:labels.text.fill%7Ccolor:0x616161&style=feature:road.local%7Celement:labels.text.fill%7Ccolor:0x9e9e9e&style=feature:transit.line%7Celement:geometry%7Ccolor:0xe5e5e5&style=feature:transit.station%7Celement:geometry%7Ccolor:0xeeeeee&style=feature:water%7Celement:geometry%7Ccolor:0xc9c9c9&style=feature:water%7Celement:labels.text.fill%7Ccolor:0x9e9e9e&size=480x360 -->
+                </div>
+            </div>
+        </section>
+
+
     </main>
 
     <footer class="ba-footer">
