--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <div class="subscribe-mail ba-col-12 ba-col-md-6">
                         <span>Подписаться</span>
                         <input class="subscribe-mail__input" type="text" placeholder="Ваш email">
-                        <button class="btn"><i class="fas fa-plus"></i></button>
+                        <button class="btn_white-brdr"><i class="fas fa-plus"></i></button>
                     </div>
 
                     <div class="ba-social ba-col-12 ba-col-md-4">
@@ -660,6 +660,9 @@
     <script src="https://kit.fontawesome.com/1c19972f1c.js" crossorigin="anonymous"></script>
 
     <script src='./js/index.js'></script>
+
+    <script src="//code.jivosite.com/widget/CDvr0Rm1YG" async></script>
+
 </body>
 
 </html>
