--- a/woman.html
+++ b/woman.html
@@ -28,19 +28,19 @@
                         <i class="fas fa-phone-alt"></i>
                         8 800 123 45 67
                     </span>
-                    <a class="ba-header-top-contacts__link" href="./contact.html">
+                    <!-- <a class="ba-header-top-contacts__link" href="./contact.html">
                         Контакты
-                    </a>
+                    </a> -->
                 </div>
                 <div class="ba-header-top-user">
                     <!-- <div class="user__currency">$us<span><i class="fas fa-sort-down"></i></span></div> -->
                     <!-- <div class="user__account">личный кабинет</div> -->
-                    <select name="" id="" autofocus>
+                    <!-- <select class="ba-header-top-user__currency" name="" id="" autofocus>
                         <option value="">uah</option>
                         <option value="">$</option>
-                    </select>
+                    </select> -->
                     <form class="ba-search-form">
-                        <input class="hidden-sm" type="text" id="searchInput">
+                        <input class="ba-search-form__input" type="text" id="searchInput">
                         <button type="submit" id="search-btn" class="search-btn" aria-label="Поиск товаров">
                             <i class="fas fa-search"></i></button>
 
@@ -52,10 +52,11 @@
         <div class="ba-header-main">
             <div class="container">
                 <div class="ba-header-main-wrapper">
-                    <a class="ba-header-main-logo ba-col-8 ba-col-sm-3 ba-col-md-3" href="./index.html">
+                    <a href="#" class="mobile-menu-btn ba-col-2"><i class="fas fa-bars"></i></a>
+                    <a class="ba-header-main-logo ba-col-6 ba-col-sm-2 ba-col-md-2" href="./index.html">
                         <img src="./img/logo.png" alt="logo">
                     </a>
-                    <nav class="ba-header-main-nav ba-col-sm-7 hidden-sm ba-col-md-7">
+                    <nav class="ba-header-main-nav ba-col-sm-12 ba-col-sm-8 ba-col-md-8">
                         <ul class="ba-menu">
                             <li class="ba-menu-item">
                                 <a href="./woman.html" class="ba-menu__link">Женщинам
@@ -77,7 +78,7 @@
                             </li>
                         </ul>
                     </nav>
-                    <div class="shopping ba-col-4 ba-col-sm-3 ba-col-md-2">
+                    <div class="shopping ba-col-3 ba-col-sm-2 ba-col-md-2">
                         <a class="shopping-favorites" href="#" id="wishlist">
                             <img src="img/favorites.png" alt="">
                             <span class="shopping-counter">0</span>
@@ -90,8 +91,23 @@
                             <!-- <span class="pull-right">0 items | $ 0</span> -->
                         </a>
                     </div>
-                </div>
 
+                </div>
+                <!--  -->
+                <!-- <div class="ba-col-12 ba-col-sm-12 hidden-md">
+                    <div>
+                        <div class="menu-small">
+                            <p>Menu</p>
+                            <div class="btn-group pull-right">
+                                <button type="button" class="btn dropdown-toggle" data-toggle="#menu"
+                                    aria-expanded="false">
+                                    <span class="glyphicon glyphicon-menu-hamburger"></span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div> -->
+                <!--  -->
             </div>
         </div>
 
